<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ui"

    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_24sdp"
                app:srcCompat="@drawable/icon" />
            <TextView
                android:id="@+id/appTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/play_regular"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/main_username"
                android:textColor="@color/white"
                android:textColorHint="@color/white_transparent"
                android:hint="@string/lg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/main_password"
                    android:maxLength="12"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_transparent"
                    android:hint="@string/lg_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"/>
                <ImageView
                    android:visibility="gone"
                    android:id="@+id/pwd_eye_icon_hidden"
                    android:src="@drawable/eye"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="end|center"
                    android:layout_marginRight="@dimen/_20sdp"
                    />
                <ImageView
                    android:id="@+id/pwd_eye_icon"
                    android:src="@drawable/visible_eye"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_gravity="end|center"
                    />


            </FrameLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/hp_login"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Login"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/black"
                    app:backgroundTint="@null"
                    android:background="@drawable/login_butt_cust"/>

                <TextView
                    android:id="@+id/hp_signUp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/sg_button_text"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/white_transparent"
                    android:layout_gravity="center"

                    />
            </LinearLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_transparent"
                android:text="@string/fgt_pwd"
                android:textSize="@dimen/_20sdp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>